# libvarnam

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE.txt  README.html  README.md  TODO.txt  api.h  atom.xml  cloneurl  compile.c  description  error.h  index.html  lang_detection.c  langcodes.h  learn.c  lex.c  lex.h  lru_cache.c  makedistro.sh  module.h  params.json  parser.c  parser.h  rendering.c  rendering.h  result-codes.h  sitemap.xml  snprintf.h  strbuf.c  symbol-table.c  symbol-table.c.orig  symbol-table.h  tl.c  token.c  token.h  (+40 more)
blog/2012/07/12/welcome/: index.html
blog/2012/08/05/libvarnam-is-in-beta/: index.html
blog/2012/08/08/varnamc-command-line-interface-libvarnam/: index.html
blog/2012/08/09/introducing-varnam-train/: index.html
blog/2012/08/11/added-language-detection-support-to-libvarnam/: index.html
blog/archives/: index.html
blog/categories/api/: atom.xml  index.html
blog/categories/features/: atom.xml  index.html
blog/categories/introduction/: atom.xml  index.html
blog/categories/libvarnam/: atom.xml  index.html
blog/categories/news/: atom.xml  index.html
blog/categories/varnam/: atom.xml  index.html
docs/: README.md
examples/: CMakeLists.txt  learning.c  learning_example.c  transliteration.c  transliteration_example.c
foreign/: CMakeLists.txt  snprintf.c
renderer/: ml_unicode.c  renderers.h
rendering/: ml_unicode.c  renderers.h
schemes/: gu  gu-unicode  gu-unicode.vst  hi  hi-unicode  kn  ml  ml-inscript  ml-unicode  ml-unicode.vst  mr  ne  or  pa  sa  ta  ta-unicode  te  varnam-compile
scripts/: varnamruby.rb
sexpr/: CMakeLists.txt  cstring.c  cstring.h  event_temp.c  faststack.c  faststack.h  io.c  parser.c  sexp.c  sexp.h  sexp_errors.h  sexp_memory.c  sexp_memory.h  sexp_ops.c  sexp_ops.h  sexp_vis.c  sexp_vis.h
stylesheets/: screen.css
tests/: 00-init.c  01-transliteration.c  02-ml-unicode.c  03-vst-compilation.c  04-learning.c  05-export-words.c  CMakeLists.txt  export-words.c  initialization.c  learning.c  ml-unicode-input.txt  ml-unicode-reverse-input.txt  stemmer_tests.c  strbuftest.c  td-01.vsf  test-runner.c  test_output_cleanup.rb  testcases.c  testcases.h  tests.h  transliteration.c  varnamc_tests.c  vst-compilation.c
tests/testdata/: invalid-and-valid-words-patterns.json
tools/: CMakeLists.txt  print-tokens.c  unidump.rb
vsf/: ml-unicode.vsf
